www/css/core.css
/* ... */
label.email input,
label.search input{
	padding-left: 2.5rem;
}

select{
	font-family: "Fork Awesome", "Crimson Pro";
	padding-left: 1rem;
	padding-right: 2rem;
	display: block;
}

select[multiple]{
	padding: 1rem;
}

label.select > span{
	display: block;
}

label.select > span + span{
	display: inline-block;
}

label.select > span + span::after{
	display: block;
	position: absolute;
	top: calc((2rem + 1.4rem + 2px) / 2 - 10px);
	right: calc(1rem - 12px / 2);
	content: "\f107";
	font-family: "Fork Awesome";
	font-size: 1rem;
	line-height: 1;
	color: var(--sub-text);
	margin-top: -3px; /* Adjust for Crimson Pro line-height */
	text-shadow: 1px 1px 0 rgba(255, 255, 255, .5);
	transition: color .5s;
}

label.search:focus-within::before,
label.search:hover::before,
label.select:hover > span + span::after{
	color: var(--input-outline);
	transition: none;
}

label.select > span + span,
label.email,
label.search{
	position: relative;
	max-width: 100%;
}

label.email::before,
label.search::before{
	display: block;
	position: absolute;
	top: calc(2rem + .7rem);
	left: 1rem;
	font-family: "Fork Awesome";
	font-size: 1rem;
	line-height: 1;
	margin-right: 1rem;
	color: var(--sub-text);
	margin-top: -3px; /* Adjust for Crimson Pro line-height */
	text-shadow: 1px 1px 0 rgba(255, 255, 255, .5);
	width: 1rem;
	transition: color .5s;
	cursor: text;
}

label.search::before{
	content: "\f002";
}

label.email::before{
	content: "\f0e0";
}

nav li.highlighted a,
nav a[rel],
a.button,
button,
input[type="text"],
input[type="month"],
input[type="email"],
input[type="search"],
select{
	transition: border-color .5s, background-color .5s;
}

a.button:hover,
nav li.highlighted a:hover,
nav a[rel]:hover,
button:hover{
	transition: none;
}

input[type="text"]:focus,
input[type="text"]:hover,
input[type="month"]:focus,
input[type="month"]:hover,
input[type="email"]:focus,
input[type="email"]:hover,
input[type="search"]:focus,
input[type="search"]:hover,
select:focus,
select:hover{
	border-color: var(--input-outline);
	background: rgba(0, 0, 0, .1);
	transition: none;
}

input[type="text"]:user-invalid,
input[type="month"]:user-invalid,
input[type="email"]:user-invalid,
input[type="search"]:user-invalid{
	border-color: #ff0000;
	box-shadow: 1px 1px 0 #ff0000, -1px -1px 0 #ff0000;
}

input[type="text"]:-moz-ui-invalid,
input[type="month"]:-moz-ui-invalid,
input[type="email"]:-moz-ui-invalid,
input[type="search"]:-moz-ui-invalid{
	border-color: #ff0000;
	box-shadow: 1px 1px 0 #ff0000, -1px -1px 0 #ff0000;
}

select[multiple] option:checked{
	/* We have to use this method to set the bg color because browsers override background-color with !important */
	background-image: linear-gradient(0deg, var(--button) 0%,  var(--button) 100%);
}

form[action="/settings"]{
	margin: 0 1rem;
}

form[action="/ebooks"] label{
	max-width: 100%;
}

form[action="/ebooks"] select[multiple] option[value="all"]{
	border-bottom: 1px dashed var(--sub-text);
}

form[action="/ebooks"]{
	display: grid;
	grid-gap: 1rem;
	grid-template-columns: 10rem auto auto auto 1fr;
	margin: 0 1rem;
	margin-bottom: 4rem;
	max-width: calc(100% - 2rem);
}

form[action="/ebooks"] label.tags{
	grid-column: 1;
	grid-row: 1 / span 2;
	white-space: nowrap;
}

form[action="/ebooks"] label.tags select{
	width: 100%;
	height: calc(100% - 1.4rem);
}

form[action="/ebooks"] label.search{
	grid-column: 2 / span 4;
}

form[action="/ebooks"] label.sort{
	grid-column: 2;
}

form[action="/ebooks"] label.sort select{
	max-width: 100%;
}

form[action="/ebooks"] label.view{
	grid-column: 3;
}

form[action="/ebooks"] label.per-page{
	grid-column: 4;
}

form[action="/ebooks"] button{
	justify-self: end;
	margin-top: 1.4rem;
}

form.single-row{
	display: flex;
	flex-direction: column;
}

form.single-row label{
	width: 100%;
}

form.single-row button{
	align-self: flex-end;
	margin-top: 1rem;
}

article nav ol li:not(:first-child):not(:last-child):not(.highlighted),
main.ebooks nav ol li:not(:first-child):not(:last-child):not(.highlighted){
	display: none;
}

article nav ol li.highlighted::before,
main.ebooks nav ol li.highlighted::before{
	content: "⋯";
	padding-right: 1rem;
}

article nav ol li.highlighted::after,
main.ebooks nav ol li.highlighted::after{
	content: "⋯";
	padding-left: 1rem;
}

article nav ol li.highlighted:first-child::before,
article nav ol li.highlighted:last-child::after,
article nav ol li.highlighted:nth-child(2)::before,
article nav ol li.highlighted:nth-last-child(2)::after,
main.ebooks nav ol li.highlighted:first-child::before,
main.ebooks nav ol li.highlighted:last-child::after,
main.ebooks nav ol li.highlighted:nth-child(2)::before,
main.ebooks nav ol li.highlighted:nth-last-child(2)::after{
	display: none;
}

.has-hero hgroup{
	padding: 2rem 0 1.75rem 0;
	display: flex;
	align-items: center;
	flex-direction: column;
	max-width: none;
}

.has-hero picture{
	max-width: none;
	text-align: center;
	margin-bottom: 2rem;
}

.has-hero picture + p{
	margin-top: 0;
}

h1 + ul.message,
.has-hero picture + ul.message{
	margin-top: 0;
	margin-bottom: 1rem;
}

.has-hero img{
	border: 1px solid var(--border);
	border-radius: .25rem;
	max-width: 100%;
}

.has-hero hgroup h1,
.has-hero > h1,
.has-hero hgroup h2,
.has-hero > h2{
	border: none;
	padding: 0;
	margin: 0;
}

.has-hero hgroup h1,
.has-hero > h1{
	margin-bottom: 1rem;
	letter-spacing: 1px;
}

.has-hero > h1{
	padding: 2rem;
	margin: 0;
}

.has-hero hgroup h2,
.has-hero > h2{
	font-family: "Crimson Pro", serif;
	font-style: italic;
	font-weight: normal;
	font-size: 1.75rem;
	text-align: center;
	text-transform: none;
	letter-spacing: 0;
}

.button-row{
	display: grid;
	margin: 2rem 0;
	grid-template-columns: 1fr 1fr;
	grid-gap: 1rem;
	justify-items: center;
}

.button-row.center{
	grid-template-columns: 1fr;
}

.button-row.narrow{
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
}

.button-row:last-child{
	margin-bottom: 0;
}

.masthead h2 + section > h3{
	margin-top: 0;
}
/* ... */

